--- a/Views/Admin/ManageUserRoles.cshtml
+++ b/Views/Admin/ManageUserRoles.cshtml
@@ -14,5 +14,6 @@
             </div>
         }
     </div>
+    <div asp-validation-summary="All" class="text-danger"></div>
     <button type="submit" class="btn btn-success">Save</button>
-</form>
+            </form>
