--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -19,6 +19,9 @@
                 <li>
                     <a id="manage" class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">My account</a>
                 </li>
+                <li>
+                    <a asp-controller="Wishlist" asp-action="Index" class="dropdown-item">View Wishlist</a>
+                </li>
                 @if (User.IsInRole("Admin"))
                 {
                     <li>
@@ -29,7 +32,7 @@
                     <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                         <button id="logout" type="submit" class="dropdown-item">Logout</button>
                     </form>
-                </li>
+                </li>               
             </ul>
         </li>
 }
